[package]
name = "rconvert"
version = "0.1.0"
authors = ["Calvin Karundu <calvin.mwenda@gmail.com>"]
description = "A simple CLI tool to convert weight, temperature and currency"

[dependencies]
clap = "2.29.0"
reqwest = "0.8.4"
serde_json = "1.0.9"
serde = "1.0"
serde_derive = "1.0"
error-chain = "0.11.0"
